--- a/newznab.conf
+++ b/newznab.conf
@@ -1,4 +1,8 @@
 <VirtualHost *:80>
+
+ServerAdmin webmaster@localhost
+ServerName localhost
+
     <Directory /var/www/newznab/www/>
         Options FollowSymLinks
         AllowOverride All
@@ -8,6 +12,7 @@
     </Directory>
 
     DocumentRoot /var/www/newznab/www
-    ErrorLog /var/www/newznab/logs/error.log
-    CustomLog /var/www/newznab/logs/access.log combined
+    ErrorLog /var/log/apache2/error.log
+    LogLevel warn
+    ServerSignature Off
 </VirtualHost>
