--- a/newznab.conf
+++ b/newznab.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
 ServerAdmin webmaster@localhost
-ServerName localhost
+ServerName newznab
 
     <Directory /var/www/newznab/www/>
         Options FollowSymLinks
