--- a/newznab.conf
+++ b/newznab.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-ServerAdmin webmaster@localhost
+ServerAdmin webmaster@newznab
 ServerName newznab
 
     <Directory /var/www/newznab/www/>
