--- a/newznab.conf
+++ b/newznab.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
 
-ServerAdmin webmaster@newznab
-ServerName newznab
+ServerAdmin webmaster@localhost
+ServerName localhost
 
-    <Directory /var/www/newznab/www/>
+    <Directory /var/www/newznab/>
         Options FollowSymLinks
         AllowOverride All
         Order allow,deny
