--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,8 @@
 [supervisord]
 nodaemon=true
 
+[program:newznab]
+command=sleep 1m && ./newznab.sh
+
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
