--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,11 +1,16 @@
 [supervisord]
 nodaemon=true
 
-[program:config]
-command=/config.sh
-
 [program:newznab]
 command=/newznab.sh
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
