--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,9 @@
 [supervisord]
 nodaemon=true
 
+[program:config]
+command=/config.sh
+
 [program:newznab]
 command=/newznab.sh
 stdout_logfile=/dev/stdout
