--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,15 +2,15 @@
 nodaemon=true
 
 [program:newznab]
-command=/newznab.sh
+command=/start.sh
 stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+stdout_logfile_maxbytes=50MB
 stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+stderr_logfile_maxbytes=50MB
 
 [program:apache2]
 command=apachectl -D FOREGROUND
 stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+stdout_logfile_maxbytes=50MB
 stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+stderr_logfile_maxbytes=50MB
