--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:newznab]
-command=/start.sh
+command=/newznab.sh
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=128MB
 stderr_logfile=/dev/stderr
